Reconcile job and indexing scripts (see #171)